# bookkeep-web

./: Cargo.toml  TODO.md  templates
.sqlx/: query-08f8ae08609792eeb0a09281638a4bc84b8f38bd0619e6fd1af277c935e4c148.json  query-1908914806678b030886f06bc4654f9187a89cbd604f947dd21393f4bd59d323.json  query-2362842df9b36c5786e9244f12b5cbc3731d1b5ca1c02602a81b54f8968803ec.json  query-30a4e1fd50f5541886605dcaf1fd6c80f827a3e162eb064af6cddc52c74ab30b.json  query-3ffb099bc86a62bd8d1160ba558a6d25b46da02ba537a95a2f421cd4b40bd53b.json  query-41c57d9347a0a292a6388578a8699f1f81739da07ed8ef275d808df525936ef9.json  query-4f32223163c79604c4adfb83c73dbe208d85b116bdc2adaef3037f8842414c65.json  query-513676ea0fc2ca4ed65856298d0502b4fa85e8d0167e80e8f5765c79521a7d2c.json  query-62a8ee089a34f49be4c4a69d340956ca7cb5e58d399a7966f348582c39d2fc2d.json  query-65ba5d58bcaab335bbf5c18a087a15b217415aa46011dcd0e21ab3179f79c00e.json  query-6a3d245f3a0d87c1edfd036e538f2de7e7abc9a3ee8170782b2aab30d7a893f7.json  query-6f6b8883f41359ac5d6ed7467ee0a59193c48d07ed96ca46b20a7aa9128856eb.json  query-7e5a001ec2d168c22fdfa3b139b76df4c2f1b285488cdfa5a9e1241ae429f979.json  query-89830401cee8a4d4474c9985eeae711ee599f3c2aa39f2130f4754b92bcdb1ad.json  query-8c73c3154d44edd85c88e3126548eded99b3fea5f706ecd702b13019b462a6ce.json  query-8f45d6752276c7caeb66187506907490e186c1318db3dec7b1f6579e7334d05a.json  query-913688ef15cae605516e1670b995eb945f3c70f2eee94f2fef7017c39f22e8b0.json  query-9361d842a6288f3d08e7a44ec61248d85523fc2eec316ba69330438ab29f1ab1.json  (+9 more)
migrations/: 1000_OIDC_auth.sql  2000_accounting_tables.sql  (+2 more)
(+38 files in other folders)
