[package]
name = "drim"
version = "0.1.0"
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

[dependencies]
dotenvy = "*"
# Web serving framework
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
# Multithreaded/asynchronous runtime (version controlled by hyper)
tokio = { version = "1", features = ["full"] }
# Helpers for asynchronous programming (version controlled by hyper)
futures = "*"
# Serialization (syntax versions set by main lib)
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_urlencoded = "*"
# SQL database driver
sqlx = { version = "0.7", features = [
  # Runtime configuration
  "runtime-tokio",
  "tls-rustls",
  # Enable features
  "macros",
  "migrate",
  "postgres",
  # Add non-standard data format support
  "time",
  "json",
  "rust_decimal",
]}
rust_decimal = "*"
time = { version = "*", features = ["serde-human-readable"] }
# Auth library
# (We'll later custom write the request/response code for this in raw hyper)
openidconnect = { version = "3.4"} #, default-features = false }
reqwest = "*"
nanoid = "0.4"
# And a templating library, to render html
askama = "0.12.1"
